fix LoginPage line alignment

--- a/src/main/resources/src/components/Authorization/LoginPage/LoginPage.scss
+++ b/src/main/resources/src/components/Authorization/LoginPage/LoginPage.scss
@@ -129,7 +129,6 @@
         border-radius: 5px;
         padding-left: var(--padding-left);
         
-        // background-color: #fafafa;
 
         //dark-theme
         // background-color: rgba(#333333, 0.3);
@@ -155,7 +154,7 @@
         border-radius: 999px;
         position: absolute;
         right: 5px;
-        top: 19px;
+        top: calc(25px + 0.5rem);
         transform-origin: 50% 100%;
         transform: scaleX(1);
         transform: rotate(-45deg);
@@ -165,8 +164,6 @@
       & .authorization__line--hidden {
         transform: scaleX(0);
         height: 0;
-        // transform: rotate(0);
-        transition: 0.1s ease-in-out;
       }
     }
     .authorization__field_input .authorization__img {
